--- a/css/style.css
+++ b/css/style.css
@@ -389,18 +389,11 @@ aside h2 {
 }
 
 .details-container {
-  flex-direction: column;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
 }
-.details-container > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-}
-.details-container > div:first-child {
-  margin-bottom: 16px;
-}
+
 .details-item {
   display: flex;
   justify-content: space-between;
@@ -469,6 +462,14 @@ aside h2 {
   .today-weather-info {
     margin-top: 16px;
     flex-wrap: wrap;
+  }
+  .details-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 480px) {
+  .today-weather-info {
+    justify-content: center;
   }
 }
 
