--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,8 @@ header .search .suggestion-list {
   align-items: center;
   gap: 8px;
 }
-.recent .recent-item .recent-info > div {
-  margin-left: 14px;
+.recent-temp {
+  width: 50px;
 }
 .recent-city-name {
   color: var(--Gray-900);
@@ -223,7 +223,7 @@ main {
   padding: 20px;
 }
 main section {
-  width: 70%;
+  width: 65%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -235,7 +235,7 @@ main section article {
 }
 
 main aside {
-  width: 30%;
+  width: 35%;
 }
 
 .today-weather-info {
@@ -308,6 +308,8 @@ aside {
   flex-direction: column;
   justify-content: center;
   gap: 8px;
+  width: 25%;
+  margin-right: 5px;
 }
 
 .days7-forecast-container .day .right p:nth-child(1) {
@@ -323,9 +325,10 @@ aside {
 
 .days7-forecast-container .day .mid {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 8px;
+  width: 49%;
 }
 .days7-forecast-container .day .mid img {
   width: 40px;
@@ -335,6 +338,10 @@ aside {
   color: var(--Gray-900-60f);
   font-size: 16px;
   letter-spacing: 0.15px;
+  word-break: keep-all;
+}
+.days7-forecast-container .day .left {
+  width: 25%;
 }
 .days7-forecast-container .day .left p {
   color: var(--Gray-900-60f);
@@ -378,8 +385,8 @@ aside h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  padding: 16px 24px;
+  gap: 12px;
+  padding: 16px 32px;
   border-radius: 16px;
   background-color: var(--White-32f);
 }
